--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "import plotly\n",
     "\n",
-    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "plotly.offline.init_notebook_mode(connected=True) #can't \n",
     "trace0 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy'], 'y': [8, 11, 10]}\n",
     "\n",
     "\n",
